@@ -1,5 +1,7 @@
 package com.healthconnection.application.usecase.notification.impl;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import com.healthconnection.application.usecase.notification.NotificationUseCase;
@@ -9,47 +11,40 @@ import com.sendgrid.SendGrid;
 import com.sendgrid.helpers.mail.Mail;
 import com.sendgrid.helpers.mail.objects.Content;
 import com.sendgrid.helpers.mail.objects.Email;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 @Service
 public class NotificationUseCaseImpl implements NotificationUseCase {
 
     private static final Logger logger = LoggerFactory.getLogger(NotificationUseCaseImpl.class);
 
-    @Value("${sendgrid.api-key}")
+    @Value("${sendgrid.api.key}")
     private String sendGridApiKey;
-    
+
     @Value("${notification.email.sender}")
     private String senderEmail;
 
+    @Value("${app.url}")
+    private String appUrl; // La URL base de tu aplicación
+
     @Override
-    public void sendEmail(String addressee, String firstName) {
-
+    public void sendEmail(String recipientEmail, String token) {
         Email from = new Email(senderEmail);
-        String subject = "Bienvenido a HealthConnection";
-        Email to = new Email(addressee);
+        String subject = "Verifica tu dirección de correo electrónico";
+        Email to = new Email(recipientEmail);
 
-        String emailContent = """
-            Hola %s,
+        // Construir el enlace de verificación con el token
+        String verificationUrl = String.format("%s/verify-email?token=%s", appUrl, token);
 
-            ¡Bienvenido a HealthConnection! Nos alegra mucho que te hayas unido a nuestra comunidad.
-
-            Tu registro ha sido exitoso y ahora tienes acceso a una plataforma que te ayudará a gestionar tu salud de manera más efectiva. Aquí podrás encontrar recursos, conectarte con profesionales de la salud y mantener un seguimiento de tu bienestar.
-
-            Para empezar, te recomendamos que explores las siguientes funcionalidades:
-
-            - Consultas Médicas: Programa y gestiona tus citas médicas.
-            - Pagos en línea: Paga tus citas médicas desde la plataforma.
-
-            Si tienes alguna pregunta o necesitas ayuda, no dudes en contactarnos a través de nuestro soporte al cliente.
-
-            Gracias por confiar en nosotros para cuidar de tu salud.
-
-            Saludos cordiales,
-
-            El equipo de HealthConnection
-            """.formatted(firstName);
+        // Contenido del correo electrónico
+        String emailContent = String.format(
+            "Hola,\n\n" +
+            "Gracias por registrarte en HealthConnection. Para completar tu registro, por favor verifica tu dirección de correo electrónico haciendo clic en el siguiente enlace:\n\n" +
+            "%s\n\n" +
+            "Si no has solicitado este registro, por favor ignora este correo. \n\n" +
+            "Saludos cordiales,\n" +
+            "El equipo de HealthConnection",
+            verificationUrl
+        );
 
         Content content = new Content("text/plain", emailContent);
         Mail mail = new Mail(from, subject, to, content);
@@ -60,9 +55,14 @@ public class NotificationUseCaseImpl implements NotificationUseCase {
             request.setMethod(Method.POST);
             request.setEndpoint("mail/send");
             request.setBody(mail.build());
+
+            // Enviar la solicitud
             sg.api(request);
+
+            logger.info("Verification email sent successfully to {}", recipientEmail);
         } catch (Exception ex) {
-            logger.error("Error sending email: ", ex);
+            logger.error("Error sending verification email: ", ex);
         }
     }
 }
+
